--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,26 @@ body {
   color: $text-content;
 }
 
+::-webkit-scrollbar {
+  background-color: $paled-content;
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: $pale-back;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $dark-back;
+  border-radius: 10px;
+  border: 2px solid $pale-back;
+
+  &:hover {
+    background-color: rgb(66, 66, 66);
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
@@ -41,10 +61,21 @@ a.active {
   margin: 0 auto;
 }
 
+.smallContainer {
+  max-width: 570px;
+  //padding: 0 10px;
+  margin: 0 auto;
+  width: 100%;
+}
+
 .layout {
   min-height: 100vh;
   display: grid;
   grid-template-rows: max-content 1fr;
+}
+
+.layoutContent {
+  margin-top: 100px;
 }
 
 button {
@@ -62,12 +93,18 @@ form {
     gap: 20px;
   }
 
-  input {
+  input, textarea {
     padding: 15px 10px;
     font-size: 18px;
     border: none;
     background-color: $dark-back;
     color: $main-content;
+  }
+
+  textarea {
+    resize: none;
+    //border: 1px solid $main-content;
+    //border-radius: 10%;
   }
 
   button {
@@ -83,3 +120,4 @@ form {
     }
   }
 }
+
