--- a/src/components/pages/messager/select-chat/chats/chat-item/chat-item.module.scss
+++ b/src/components/pages/messager/select-chat/chats/chat-item/chat-item.module.scss
@@ -10,3 +10,26 @@
     background-color: $lighted-pale-back;
   }
 }
+
+.lastMessage {
+  display: flex;
+  align-items: center;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding: 0 20px;
+
+  border-top: 1px solid $paled-content;
+
+  .user {
+
+  }
+
+  .text {
+    margin-left: 20px;
+  }
+}
+
+.lastMessage.unread {
+  background-color: $paled-content;
+}
+
