--- a/src/components/pages/messager/chat/chat-page.module.scss
+++ b/src/components/pages/messager/chat/chat-page.module.scss
@@ -66,6 +66,10 @@
   text-align: right;
 }
 
+.main {
+  margin-bottom: 175px;
+}
+
 .emptyMessages {
   margin-top: 20vh;
   text-align: center;
@@ -77,7 +81,6 @@
   display: flex;
   flex-direction: column-reverse;
   gap: 13px;
-  margin-bottom: 140px;
 }
 
 .messageGroup {
@@ -104,18 +107,32 @@
   margin-top: 30px;
 }
 
-form.sendMessage {
+.typingUsers {
+  min-height: 21px;
+  margin-top: 9px;
+  margin-left: 10px;
+}
+
+.typingUser {
+
+}
+
+.bottomMenu {
   position: fixed;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 10px;
   padding: 10px;
-  display: grid;
-  grid-template: "text btn";
-  gap: 10px;
   border: 1px solid $pale-back;
   background-color: $dark-back;
   border-radius: 10px;
+  z-index: 10;
+}
+
+form.sendMessage {
+  display: grid;
+  grid-template: "text btn";
+  gap: 10px;
 
   textarea.text {
     grid-area: text;
@@ -130,6 +147,17 @@ form.sendMessage {
     grid-area: btn;
     border: 1px solid $pale-back;
   }
+}
+
+.chatFooterBlind {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: $dark-back;
+  height: 30px;
+  width: 100vw;
+  z-index: 9;
 }
 
 
